@@ -1,9 +1,15 @@
+Sun Nov 13 12:00:36 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/Mixed_Sync_ASync_Events/test_i.cpp:
+        
+          Extended test.
+
 Sun Nov 13 11:31:21 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         * tests/Mixed_Sync_ASync_Events/main.cpp:
         * tests/Mixed_Sync_ASync_Events/test_i.h:
         * tests/Mixed_Sync_ASync_Events/test_i.cpp:
-        
+
           Fixed more Win32 warnings and compile errors :-(
 
 Sun Nov 13 11:03:23 UTC 2011  Martin Corino  <mcorino@remedy.nl>
